--- a/local.yml
+++ b/local.yml
@@ -1,10 +1,23 @@
 version: '3'
 
 volumes:
-  local_postgres_data: {}
-  local_postgres_data_backups: {}
+  local_postgres_data: { }
+  local_postgres_data_backups: { }
 
 services:
+  tensorflow-serving:
+    image: 'tensorflow/serving'
+    ports:
+      - '8500:8500'
+      - '8501:8501'
+    volumes:
+      - '/tmp/model-data:/models'
+    entrypoint:
+      - '/usr/bin/tf_serving_entrypoint.sh'
+      - '--model_config_file=/models/models.config'
+      - '--model_config_file_poll_wait_seconds=10'
+
+
   django: &django
     build:
       context: .
@@ -13,6 +26,7 @@ services:
     container_name: django
     depends_on:
       - postgres
+      - tensorflow-serving
     volumes:
       - .:/app:z
     env_file:
@@ -46,7 +60,7 @@ services:
       - redis
       - postgres
 
-    ports: []
+    ports: [ ]
     command: /start-celeryworker
 
   celerybeat:
@@ -57,7 +71,7 @@ services:
       - redis
       - postgres
 
-    ports: []
+    ports: [ ]
     command: /start-celerybeat
 
   flower:
