--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Run Django Tests
         run:  |
-          export DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}" && docker-compose -f local.yml exec -e DATABASE_URL=${DATABASE_URL} -T django pytest .
+          export DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}" && docker-compose -f local.yml exec -e DATABASE_URL=${DATABASE_URL} -e CELERY_BROKER_URL=${REDIS_URL} -T django pytest .
 
       - name: Tear down the Stack
         run:  docker-compose down
