--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,8 @@ name: CI
 env:
   DOCKER_BUILDKIT: 1
   COMPOSE_DOCKER_CLI_BUILD: 1
-
+  # local creds for run tests
+  DATABASE_URL: postgres://BTGEgCfhSerZBDruKpHrrOxvdTkmXQQY:FmdbYdJBWVBnAQX5lakpt7vJqGJibQk5dCuQdsB6xHMfDBQwuJ9WuoZLIBJU18nC@postgres:5432/moon_vision_challenge
 
 on:
   pull_request:
@@ -54,8 +55,7 @@ jobs:
         run:  docker-compose -f local.yml up -d
 
       - name: Run Django Tests
-        run:  |
-          export DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}" && docker-compose -f local.yml exec -e DATABASE_URL=${DATABASE_URL} -e CELERY_BROKER_URL=${REDIS_URL} -T django pytest .
+        run:  docker-compose -f local.yml exec -e DATABASE_URL=${DATABASE_URL} -T django pytest .
 
       - name: Tear down the Stack
         run:  docker-compose down
