ci: django service deps

--- a/production.yml
+++ b/production.yml
@@ -27,6 +27,7 @@ services:
     depends_on:
       - postgres
       - redis
+      - tensorflow-serving
     env_file:
       - ./.envs/.production/.django
       - ./.envs/.production/.postgres
